@@ -14,6 +14,7 @@ export(plotRDA)
 export(plotRowGraph)
 export(plotRowPrevalence)
 export(plotRowTile)
+export(plotScree)
 export(plotSeries)
 export(plotTaxaPrevalence)
 exportMethods("colTreeData<-")
@@ -37,6 +38,7 @@ exportMethods(plotRowGraph)
 exportMethods(plotRowPrevalence)
 exportMethods(plotRowTile)
 exportMethods(plotRowTree)
+exportMethods(plotScree)
 exportMethods(plotSeries)
 exportMethods(plotTaxaPrevalence)
 exportMethods(rowTreeData)
@@ -133,6 +135,7 @@ importFrom(mia,meltSE)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,sym)
+importFrom(scales,pretty_breaks)
 importFrom(scater,plotReducedDim)
 importFrom(scater,retrieveCellInfo)
 importFrom(scater,retrieveFeatureInfo)
